--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="header__inner">
             <div class="header__logo">
-                <img src="img/cat_tea_logo_90_333.png" alt="image_err">
+                <img src="src/cat_tea_logo_90_333.png" alt="image_err">
             </div>
 
             <nav class="nav">
@@ -42,7 +42,7 @@
 <div class="container">
         <div class="features">
             <div class="features__item">
-                <img class="features__icon" src="img/ico_teabag.png" alt="">
+                <img class="features__icon" src="src/ico_teabag.png" alt="">
                 <h4 class="features__title">Лучшие сорта</h4>
                 <div class="features__text">
                     Чай свежий и вкусный!
@@ -50,7 +50,7 @@
             </div>
 
             <div class="features__item">
-                <img class="features__icon" src="img/ico_1.png" alt="">
+                <img class="features__icon" src="src/ico_1.png" alt="">
                 <h4 class="features__title">Достойное качество</h4>
                 <div class="features__text">
                     Только ручной сбор!
@@ -58,7 +58,7 @@
             </div>
 
             <div class="features__item">
-                <img class="features__icon" src="img/ico_2.png" alt="">
+                <img class="features__icon" src="src/ico_2.png" alt="">
                 <h4 class="features__title">Необычная посуда</h4>
                 <div class="features__text">
                     От чебани до гайвани!
@@ -66,7 +66,7 @@
             </div>
 
             <div class="features__item">
-                <img class="features__icon" src="img/ico_3.png" alt="">
+                <img class="features__icon" src="src/ico_3.png" alt="">
                 <h4 class="features__title">Сладости из Азии</h4>
                 <div class="features__text">
                     Удивительные сочетания!
@@ -77,7 +77,7 @@
 
 <div class="works">
     <div class="works__item">
-        <img class="works__photo" src="img/works/tea_1.jpg" alt="">
+        <img class="works__photo" src="C:\Users\79831\Desktop\img\works\tea_1.jpg" alt="">
         <div class="works__content">
             <div class="works__title">Project tea</div>
             <div class="works__text">Создай свой чай</div>
@@ -85,49 +85,49 @@
     </div>
 
     <div class="works__item">
-        <img class="works__photo" src="img/works/tea_2.jpg" alt="">
+        <img class="works__photo" src="C:\Users\79831\Desktop\img\works\tea_2.jpg" alt="">
         <div class="works__content">
             <div class="works__title">Project tea</div>
             <div class="works__text">Создай свой чай</div>
         </div>
     </div>
     <div class="works__item">
-        <img class="works__photo" src="img/works/tea_3.jpg" alt="">
+        <img class="works__photo" src="C:\Users\79831\Desktop\img\works\tea_3.jpg" alt="">
         <div class="works__content">
             <div class="works__title">Project tea</div>
             <div class="works__text">Создай свой чай</div>
         </div>
     </div>
     <div class="works__item">
-        <img class="works__photo" src="img/works/tea_4.jpg" alt="">
+        <img class="works__photo" src="C:\Users\79831\Desktop\img\works\tea_4.jpg" alt="">
         <div class="works__content">
             <div class="works__title">Project tea</div>
             <div class="works__text">Создай свой чай</div>
         </div>
     </div>
     <div class="works__item">
-        <img class="works__photo" src="img/works/tea_5.jpg" alt="">
+        <img class="works__photo" src="C:\Users\79831\Desktop\img\works\tea_5.jpg" alt="">
         <div class="works__content">
             <div class="works__title">Project tea</div>
             <div class="works__text">Создай свой чай</div>
         </div>
     </div>
     <div class="works__item">
-        <img class="works__photo" src="img/works/tea_6.jpg" alt="">
+        <img class="works__photo" src="C:\Users\79831\Desktop\img\works\tea_6.jpg" alt="">
         <div class="works__content">
             <div class="works__title">Project tea</div>
             <div class="works__text">Создай свой чай</div>
         </div>
     </div>
     <div class="works__item">
-        <img class="works__photo" src="img/works/tea_7.jpg" alt="">
+        <img class="works__photo" src="C:\Users\79831\Desktop\img\works\tea_7.jpg" alt="">
         <div class="works__content">
             <div class="works__title">Project tea</div>
             <div class="works__text">Создай свой чай</div>
         </div>
     </div>
     <div class="works__item">
-        <img class="works__photo" src="img/works/tea_8.jpg" alt="">
+        <img class="works__photo" src="C:\Users\79831\Desktop\img\works\tea_8.jpg" alt="">
         <div class="works__content">
             <div class="works__title">Project tea</div>
             <div class="works__text">Создай свой чай</div>
@@ -139,7 +139,7 @@
         <div class="container">
             <div class="team__inner">
                 <div class="team__item">
-                    <img class="team__photo" src="img/team/team_1.jpg" alt="">
+                    <img class="team__photo" src="C:\Users\79831\Desktop\img\team\team_1.jpg" alt="">
                     <div class="team__name">Екатерина Нимфадора</div>
                     <div class="team__prof">HTML-разработчик и Tea-мастер</div>
                     <div class="team__text">
@@ -148,18 +148,18 @@
 
                     <div class="social">
                         <a class="social__item" href="#">
-                            <img src="img/team/social_1.png" height="18" alt="">
+                            <img src="C:\Users\79831\Desktop\img\team\social_1.png" height="18" alt="">
                         </a>
                         <a class="social__item" href="#">
-                            <img src="img/team/social_2.png" height="18" alt="">
+                            <img src="C:\Users\79831\Desktop\img\team\social_2.png" height="18" alt="">
                         </a>
                         <a class="social__item" href="#">
-                            <img src="img/team/social_3.png" height="18" alt="">
+                            <img src="C:\Users\79831\Desktop\img\team\social_3.png" height="18" alt="">
                         </a>
                     </div>
                 </div>
                 <div class="team__item">
-                    <img class="team__photo" src="img/team/team_2.jpg" alt="">
+                    <img class="team__photo" src="C:\Users\79831\Desktop\img\team\team_2.jpg" alt="">
                     <div class="team__name">Алиса Полякова</div>
                     <div class="team__prof">HTML-помошник и Coffee-мастер</div>
                     <div class="team__text">
@@ -168,13 +168,13 @@
 
                     <div class="social">
                         <a class="social__item" href="#">
-                            <img src="img/team/social_1.png" height="18" alt="">
+                            <img src="C:\Users\79831\Desktop\img\team\social_1.png" height="18" alt="">
                         </a>
                         <a class="social__item" href="#">
-                            <img src="img/team/social_2.png" height="18" alt="">
+                            <img src="C:\Users\79831\Desktop\img\team\social_2.png" height="18" alt="">
                         </a>
                         <a class="social__item" href="#">
-                            <img src="img/team/social_3.png" height="18" alt="">
+                            <img src="C:\Users\79831\Desktop\img\team\social_3.png" height="18" alt="">
                         </a>
                     </div>
                 </div>
@@ -190,7 +190,7 @@
     <div class="container">
         <div class="reviews__item">
                 <div class="reviews__photo">
-                    <img class="reviews__img" src="img/reviews/cats_meme.jpg" alt="">
+                    <img class="reviews__img" src="C:\Users\79831\Desktop\img\reviews\cats_meme.jpg" alt="">
                 </div>
         </div>
     </div>
@@ -227,13 +227,13 @@
                 <h4 class="footer__title">Social</h4>
                 <div class="social__footer">
                     <a class="social__item" href="#">
-                        <img class="social__icon" src="img/team/social_1.png" height="18" alt="">
+                        <img class="social__icon" src="C:\Users\79831\Desktop\img\team\social_1.png" height="18" alt="">
                     </a>
                     <a class="social__item" href="#">
-                        <img class="social__icon" src="img/team/social_2.png" height="18" alt="">
+                        <img class="social__icon" src="C:\Users\79831\Desktop\img\team\social_2.png" height="18" alt="">
                     </a>
                     <a class="social__item" href="#">
-                        <img class="social__icon" src="img/team/social_3.png" height="18" alt="">
+                        <img class="social__icon" src="C:\Users\79831\Desktop\img\team\social_3.png" height="18" alt="">
                     </a>
                 </div>
             </div>
