update: address, social (10/02/2022)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&family=Raleway:wght@300;400;600;700&display=swap" rel="stylesheet">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 <body>
@@ -168,13 +168,13 @@
 
                     <div class="social">
                         <a class="social__item" href="#">
-                            <img src="img/team/social_1.png" height="18" alt="">
+                            <img class="social__icon" src="img/team/social_1.png" height="18" alt="">
                         </a>
                         <a class="social__item" href="#">
-                            <img src="img/team/social_2.png" height="18" alt="">
+                            <img class="social__icon" src="img/team/social_2.png" height="18" alt="">
                         </a>
                         <a class="social__item" href="#">
-                            <img src="img/team/social_3.png" height="18" alt="">
+                            <img class="social__icon" src="img/team/social_3.png" height="18" alt="">
                         </a>
                     </div>
                 </div>
@@ -214,18 +214,19 @@
 
 <footer class="footer">
     <div class="container">
+
         <div class="footer__inner">
             <div class="footer__block">
                 <h4 class="footer__title">Location</h4>
                 <address class="footer__address">
-                    <div>Б-р Менделеева, дом 4</div>
-                    <div>г.Мурино, Ленинградская обл., Россия</div>
+                    <div>Б-р Менделеева, дом 5</div>
+                    <div>г.Хмурино, Ленинградская обл., Россия</div>
                 </address>
             </div>
 
             <div class="footer__block">
-                <h4 class="footer__title">Social</h4>
-                <div class="social__footer">
+                <h4 class="footer__title">Share with Love</h4>
+                <div class="social social__footer">
                     <a class="social__item" href="#">
                         <img class="social__icon" src="img/team/social_1.png" height="18" alt="">
                     </a>
