--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
                 <a class="nav__link" href="#">Кошачье кимоно</a>
                 <a class="nav__link" href="#">Контакты</a>
             </nav>
+
+            <div class="burger"></div>
+
+
         </div>
     </div>
 </header>
