--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <div class="team__name">Екатерина Нимфадора</div>
                     <div class="team__prof">HTML-разработчик и Tea-мастер</div>
                     <div class="team__text">
-                        "Я считаю, что просвещение в теме чайной культуры имеет огромное значение<br> в развитии общества."</br>
+                        "Я считаю, что просвещение в теме чайной культуры имеет огромное значение в развитии общества."
                     </div>
 
                     <div class="social">
@@ -170,7 +170,7 @@
                     <div class="team__name">Алиса Полякова</div>
                     <div class="team__prof">HTML-помошник и Coffee-мастер</div>
                     <div class="team__text">
-                        "Я считаю, что это все её капризы,<br>но как я могу ей не помочь,</br> она же такая милашка."
+                        "Я считаю, что это все её капризы, но как я могу ей не помочь, она же такая милашка."
                     </div>
 
                     <div class="social">
