--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="ru">
 <head>
     <meta charset="utf-8">
     <title>Кошка любит чай</title>
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="header__inner">
             <div class="header__logo">
-                <img src="img/cat_tea_logo_90_333.png" alt="image_err">
+                <img src="img/cat_tea_logo_90_333.png" alt="cat_tea">
             </div>
 
             <nav class="nav">
@@ -39,8 +39,8 @@
     <div class="container">
         <div class="intro__inner">
             <h1 class="intro__title"> Что-то о чае, кошках и кимоно...</h1>
-        <h2 class="intro__subtitle">Что может быть уютнее, чем кошки и чай?</h2>
-        <a class="btn btn--red" href="#">Узнать больше о чае</a>
+        <h2 class="intro__subtitle" id="content">Что может быть уютнее, чем кошки и чай?</h2>
+        <a class="btn btn--red" href="#intro">Узнать больше о чае</a>
         </div>
     </div>
 </div>
@@ -82,9 +82,9 @@
         </div> <!--- /features --->
 </div> <!--- /container --->
 
-<div class="works">
+<div class="works" id="intro">
     <div class="works__item">
-        <img class="works__photo" src="img/works/tea_1.jpg" alt="">
+        <img class="works__photo" src="img/works/tea_1.webp" alt="" width="500" height="300">
         <div class="works__content">
             <div class="works__title">Project tea</div>
             <div class="works__text">Создай свой чай</div>
@@ -92,49 +92,49 @@
     </div>
 
     <div class="works__item">
-        <img class="works__photo" src="img/works/tea_2.jpg" alt="">
+        <img class="works__photo" src="img/works/tea_2.webp" alt="" width="500" height="300">
         <div class="works__content">
             <div class="works__title">Project tea</div>
             <div class="works__text">Создай свой чай</div>
         </div>
     </div>
     <div class="works__item">
-        <img class="works__photo" src="img/works/tea_3.jpg" alt="">
+        <img class="works__photo" src="img/works/tea_3.webp" alt="" width="500" height="300">
         <div class="works__content">
             <div class="works__title">Project tea</div>
             <div class="works__text">Создай свой чай</div>
         </div>
     </div>
     <div class="works__item">
-        <img class="works__photo" src="img/works/tea_4.jpg" alt="">
+        <img class="works__photo" src="img/works/tea_4.webp" alt="" width="500" height="300">
         <div class="works__content">
             <div class="works__title">Project tea</div>
             <div class="works__text">Создай свой чай</div>
         </div>
     </div>
     <div class="works__item">
-        <img class="works__photo" src="img/works/tea_5.jpg" alt="">
+        <img class="works__photo" src="img/works/tea_5.webp" alt="" width="500" height="300">
         <div class="works__content">
             <div class="works__title">Project tea</div>
             <div class="works__text">Создай свой чай</div>
         </div>
     </div>
     <div class="works__item">
-        <img class="works__photo" src="img/works/tea_6.jpg" alt="">
+        <img class="works__photo" src="img/works/tea_6.webp" alt="" width="500" height="300">
         <div class="works__content">
             <div class="works__title">Project tea</div>
             <div class="works__text">Создай свой чай</div>
         </div>
     </div>
     <div class="works__item">
-        <img class="works__photo" src="img/works/tea_7.jpg" alt="">
+        <img class="works__photo" src="img/works/tea_7.webp" alt="" width="500" height="300">
         <div class="works__content">
             <div class="works__title">Project tea</div>
             <div class="works__text">Создай свой чай</div>
         </div>
     </div>
     <div class="works__item">
-        <img class="works__photo" src="img/works/tea_8.jpg" alt="">
+        <img class="works__photo" src="img/works/tea_8.webp" alt="" width="500" height="300">
         <div class="works__content">
             <div class="works__title">Project tea</div>
             <div class="works__text">Создай свой чай</div>
@@ -146,7 +146,7 @@
         <div class="container">
             <div class="team__inner">
                 <div class="team__item">
-                    <img class="team__photo" src="img/team/team_1.jpg" alt="">
+                    <img class="team__photo" src="img/team/team_1.webp" alt="" width="270" height="270">
                     <div class="team__name">Екатерина Нимфадора</div>
                     <div class="team__prof">HTML-разработчик и Tea-мастер</div>
                     <div class="team__text">
@@ -155,18 +155,18 @@
 
                     <div class="social">
                         <a class="social__item" href="#">
-                            <img src="img/team/social_1.png" height="18" alt="">
+                            <img src="img/team/social_1.png" height="16" alt="" >
                         </a>
                         <a class="social__item" href="#">
-                            <img src="img/team/social_2.png" height="18" alt="">
+                            <img src="img/team/social_2.png" height="16" alt="">
                         </a>
                         <a class="social__item" href="#">
-                            <img src="img/team/social_3.png" height="18" alt="">
+                            <img src="img/team/social_3.png" height="16" alt="">
                         </a>
                     </div>
                 </div>
                 <div class="team__item">
-                    <img class="team__photo" src="img/team/team_2.jpg" alt="">
+                    <img class="team__photo" src="img/team/team_2.webp" alt="" width="270" height="270">
                     <div class="team__name">Алиса Полякова</div>
                     <div class="team__prof">HTML-помошник и Coffee-мастер</div>
                     <div class="team__text">
@@ -175,13 +175,13 @@
 
                     <div class="social">
                         <a class="social__item" href="#">
-                            <img class="social__icon" src="img/team/social_1.png" height="18" alt="">
+                            <img class="social__icon" src="img/team/social_1.png" height="16" alt="">
                         </a>
                         <a class="social__item" href="#">
-                            <img class="social__icon" src="img/team/social_2.png" height="18" alt="">
+                            <img class="social__icon" src="img/team/social_2.png" height="16" alt="">
                         </a>
                         <a class="social__item" href="#">
-                            <img class="social__icon" src="img/team/social_3.png" height="18" alt="">
+                            <img class="social__icon" src="img/team/social_3.png" height="16" alt="">
                         </a>
                     </div>
                 </div>
@@ -197,7 +197,7 @@
     <div class="container">
         <div class="reviews__item">
                 <div class="reviews__photo">
-                    <img class="reviews__img" src="img/reviews/cats_meme.jpg" alt="">
+                    <img class="reviews__img" src="img/reviews/cats_meme.webp" alt="">
                 </div>
         </div>
     </div>
@@ -211,12 +211,12 @@
             Закажите чай на сумму 2000р и мы бесплатно привезем вам его в любой уголок РФ (даже в Магадан)!
         </h3>
         <div class="download__text">
-            "Пить чай в одиночестве — познавать себя.<br> пить чай вдвоем — познавать друг друга"</br>
+            "Пить чай в одиночестве — познавать себя. пить чай вдвоем — познавать друг друга"
         </div>
         <a class="btn btn--red" href="#">Для заказа жми сюда</a>
     </div>
 </div>
-
+<a class="btn btn--red" href="#content">К самому главному</a>
 <!-- Footer -->
 
 <footer class="footer">
@@ -234,14 +234,14 @@
             <div class="footer__block">
                 <h4 class="footer__title">Share with Love</h4>
                 <div class="social social__footer">
-                    <a class="social__item" href="#">
-                        <img class="social__icon" src="img/team/social_1.png" height="18" alt="">
+                    <a class="social__item" href="https://www.facebook.com/">
+                        <img class="social__icon" src="img/team/social_1.png" height="16" alt="">
                     </a>
-                    <a class="social__item" href="#">
-                        <img class="social__icon" src="img/team/social_2.png" height="18" alt="">
+                    <a class="social__item" href="https://www.instagram.com/">
+                        <img class="social__icon" src="img/team/social_2.png" height="16" alt="">
                     </a>
-                    <a class="social__item" href="#">
-                        <img class="social__icon" src="img/team/social_3.png" height="18" alt="">
+                    <a class="social__item" href="https://vk.com/feed">
+                        <img class="social__icon" src="img/team/social_3.png" height="16" alt="">
                     </a>
                 </div>
             </div>
