--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&family=Raleway:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="tea, kimono, sweets,
+    <meta name="description" content="width=device-width, initial-scale=1">
+    <meta name="description" content="tea, kimono, sweets,
     drink, order, чай, вкусняшки, кимоно, cats, cat, кошка, заказ, пить">
 
 </head>
