--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 <div class="works" id="intro">
     <div class="works__item">
-        <img class="works__photo" src="img/works/tea_1.webp" alt="" width="500" height="300">
+        <img class="works__photo" src="img/works/tea_1.jpg" alt="" width="500" height="300">
         <div class="works__content">
             <div class="works__title">Project tea</div>
             <div class="works__text">Создай свой чай</div>
@@ -92,49 +92,49 @@
     </div>
 
     <div class="works__item">
-        <img class="works__photo" src="img/works/tea_2.webp" alt="" width="500" height="300">
+        <img class="works__photo" src="img/works/tea_2.jpg" alt="" width="500" height="300">
         <div class="works__content">
             <div class="works__title">Project tea</div>
             <div class="works__text">Создай свой чай</div>
         </div>
     </div>
     <div class="works__item">
-        <img class="works__photo" src="img/works/tea_3.webp" alt="" width="500" height="300">
+        <img class="works__photo" src="img/works/tea_3.jpg" alt="" width="500" height="300">
         <div class="works__content">
             <div class="works__title">Project tea</div>
             <div class="works__text">Создай свой чай</div>
         </div>
     </div>
     <div class="works__item">
-        <img class="works__photo" src="img/works/tea_4.webp" alt="" width="500" height="300">
+        <img class="works__photo" src="img/works/tea_4.jpg" alt="" width="500" height="300">
         <div class="works__content">
             <div class="works__title">Project tea</div>
             <div class="works__text">Создай свой чай</div>
         </div>
     </div>
     <div class="works__item">
-        <img class="works__photo" src="img/works/tea_5.webp" alt="" width="500" height="300">
+        <img class="works__photo" src="img/works/tea_5.jpg" alt="" width="500" height="300">
         <div class="works__content">
             <div class="works__title">Project tea</div>
             <div class="works__text">Создай свой чай</div>
         </div>
     </div>
     <div class="works__item">
-        <img class="works__photo" src="img/works/tea_6.webp" alt="" width="500" height="300">
+        <img class="works__photo" src="img/works/tea_6.jpg" alt="" width="500" height="300">
         <div class="works__content">
             <div class="works__title">Project tea</div>
             <div class="works__text">Создай свой чай</div>
         </div>
     </div>
     <div class="works__item">
-        <img class="works__photo" src="img/works/tea_7.webp" alt="" width="500" height="300">
+        <img class="works__photo" src="img/works/tea_7.jpg" alt="" width="500" height="300">
         <div class="works__content">
             <div class="works__title">Project tea</div>
             <div class="works__text">Создай свой чай</div>
         </div>
     </div>
     <div class="works__item">
-        <img class="works__photo" src="img/works/tea_8.webp" alt="" width="500" height="300">
+        <img class="works__photo" src="img/works/tea_8.jpg" alt="" width="500" height="300">
         <div class="works__content">
             <div class="works__title">Project tea</div>
             <div class="works__text">Создай свой чай</div>
@@ -146,7 +146,7 @@
         <div class="container">
             <div class="team__inner">
                 <div class="team__item">
-                    <img class="team__photo" src="img/team/team_1.webp" alt="" width="270" height="270">
+                    <img class="team__photo" src="img/team/team_1.jpg" alt="" width="270" height="270">
                     <div class="team__name">Екатерина Нимфадора</div>
                     <div class="team__prof">HTML-разработчик и Tea-мастер</div>
                     <div class="team__text">
@@ -166,7 +166,7 @@
                     </div>
                 </div>
                 <div class="team__item">
-                    <img class="team__photo" src="img/team/team_2.webp" alt="" width="270" height="270">
+                    <img class="team__photo" src="img/team/team_2.jpg" alt="" width="270" height="270">
                     <div class="team__name">Алиса Полякова</div>
                     <div class="team__prof">HTML-помошник и Coffee-мастер</div>
                     <div class="team__text">
@@ -197,7 +197,7 @@
     <div class="container">
         <div class="reviews__item">
                 <div class="reviews__photo">
-                    <img class="reviews__img" src="img/reviews/cats_meme.webp" alt="">
+                    <img class="reviews__img" src="img/reviews/cats_meme.jpg" alt="">
                 </div>
         </div>
     </div>
